testChangeElementsPlaces